; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_io-pgtable-arm.c_arm_lpae_iova_to_phys.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_io-pgtable-arm.c_arm_lpae_iova_to_phys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io_pgtable_ops = type { i32 }
%struct.arm_lpae_io_pgtable = type { %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32 }

@ARM_LPAE_MAX_LEVELS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.io_pgtable_ops*, i64)* @arm_lpae_iova_to_phys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @arm_lpae_iova_to_phys(%struct.io_pgtable_ops* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.io_pgtable_ops*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.arm_lpae_io_pgtable*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.io_pgtable_ops* %0, %struct.io_pgtable_ops** %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load %struct.io_pgtable_ops*, %struct.io_pgtable_ops** %4, align 8
  %11 = call %struct.arm_lpae_io_pgtable* @io_pgtable_ops_to_data(%struct.io_pgtable_ops* %10)
  store %struct.arm_lpae_io_pgtable* %11, %struct.arm_lpae_io_pgtable** %6, align 8
  %12 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %13 = getelementptr inbounds %struct.arm_lpae_io_pgtable, %struct.arm_lpae_io_pgtable* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %8, align 8
  %15 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %16 = call i32 @ARM_LPAE_START_LVL(%struct.arm_lpae_io_pgtable* %15)
  store i32 %16, i32* %9, align 4
  br label %17

17:                                               ; preds = %49, %2
  %18 = load i32*, i32** %8, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %17
  store i64 0, i64* %3, align 8
  br label %68

21:                                               ; preds = %17
  %22 = load i64, i64* %5, align 8
  %23 = load i32, i32* %9, align 4
  %24 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %25 = call i32 @ARM_LPAE_LVL_IDX(i64 %22, i32 %23, %struct.arm_lpae_io_pgtable* %24)
  %26 = load i32*, i32** %8, align 8
  %27 = sext i32 %25 to i64
  %28 = getelementptr inbounds i32, i32* %26, i64 %27
  store i32* %28, i32** %8, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @READ_ONCE(i32 %30)
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %7, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %35, label %34

34:                                               ; preds = %21
  store i64 0, i64* %3, align 8
  br label %68

35:                                               ; preds = %21
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* %9, align 4
  %38 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %39 = getelementptr inbounds %struct.arm_lpae_io_pgtable, %struct.arm_lpae_io_pgtable* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i64 @iopte_leaf(i32 %36, i32 %37, i32 %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %45

44:                                               ; preds = %35
  br label %55

45:                                               ; preds = %35
  %46 = load i32, i32* %7, align 4
  %47 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %48 = call i32* @iopte_deref(i32 %46, %struct.arm_lpae_io_pgtable* %47)
  store i32* %48, i32** %8, align 8
  br label %49

49:                                               ; preds = %45
  %50 = load i32, i32* %9, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %9, align 4
  %52 = load i32, i32* @ARM_LPAE_MAX_LEVELS, align 4
  %53 = icmp slt i32 %51, %52
  br i1 %53, label %17, label %54

54:                                               ; preds = %49
  store i64 0, i64* %3, align 8
  br label %68

55:                                               ; preds = %44
  %56 = load i32, i32* %9, align 4
  %57 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %58 = call i32 @ARM_LPAE_BLOCK_SIZE(i32 %56, %struct.arm_lpae_io_pgtable* %57)
  %59 = sub nsw i32 %58, 1
  %60 = sext i32 %59 to i64
  %61 = load i64, i64* %5, align 8
  %62 = and i64 %61, %60
  store i64 %62, i64* %5, align 8
  %63 = load i32, i32* %7, align 4
  %64 = load %struct.arm_lpae_io_pgtable*, %struct.arm_lpae_io_pgtable** %6, align 8
  %65 = call i64 @iopte_to_paddr(i32 %63, %struct.arm_lpae_io_pgtable* %64)
  %66 = load i64, i64* %5, align 8
  %67 = or i64 %65, %66
  store i64 %67, i64* %3, align 8
  br label %68

68:                                               ; preds = %55, %54, %34, %20
  %69 = load i64, i64* %3, align 8
  ret i64 %69
}

declare dso_local %struct.arm_lpae_io_pgtable* @io_pgtable_ops_to_data(%struct.io_pgtable_ops*) #1

declare dso_local i32 @ARM_LPAE_START_LVL(%struct.arm_lpae_io_pgtable*) #1

declare dso_local i32 @ARM_LPAE_LVL_IDX(i64, i32, %struct.arm_lpae_io_pgtable*) #1

declare dso_local i32 @READ_ONCE(i32) #1

declare dso_local i64 @iopte_leaf(i32, i32, i32) #1

declare dso_local i32* @iopte_deref(i32, %struct.arm_lpae_io_pgtable*) #1

declare dso_local i32 @ARM_LPAE_BLOCK_SIZE(i32, %struct.arm_lpae_io_pgtable*) #1

declare dso_local i64 @iopte_to_paddr(i32, %struct.arm_lpae_io_pgtable*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
